# davinci-resolve-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  INSTALL.md  Makefile  README.md  mcp-entry  pyproject.toml  resolve-mcp  resolve-mcp.bat  ruff.toml
.github/workflows/: ci.yml
GITIGNORED/: TODO.md  mcp_functions_list.md
docs/API_DOCS/: GEMINI_SUGGESIONS.md  README.md
examples/: getting_started.py
examples/markers/: add_spaced_markers.py  add_timecode_marker.py  alternating_markers.py  clear_add_markers.py  test_marker_frames.py
examples/media/: import_folder.py
examples/timeline/: timeline_check.py  timeline_info.py
scripts/: mcp_wrapper.ps1  run  start_mcp_server.ps1  wsl-launcher.sh
scripts/common/: batch_automation.py  status.sh  utils.sh
scripts/linux/: mcp_entry.py  wsl-launcher.sh
scripts/macos/: check-resolve-ready.sh  create-release-zip.sh  create_app_shortcut.sh  install.sh  launch.sh  mcp_resolve-claude_start  mcp_resolve-cursor_start  mcp_resolve_launcher.sh  restart-server.sh  run-now.sh  run-server.sh  server.sh  setup.sh  verify-installation.sh
scripts/windows/: check-resolve-ready.bat  check-resolve-ready.ps1  create-release-zip.bat  install.bat  mcp_wrapper.ps1  restart-server.bat  run-now.bat  start_mcp_server.ps1  verify-installation.bat  windows_install.ps1  windows_setup.ps1
src/: __init__.py  __main__.py  core.py  main.py  resolve_mcp_server.py
src/api/: __init__.py  color_operations.py  (+10 more)
tests/: benchmark_server.py  create_test_timeline.py  test_custom_timeline.py  test_improvements.py
(+124 files in other folders)
