[project]
name = "davinci-resolve-mcp"
version = "1.4.0"
description = "MCP Server for DaVinci Resolve"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501", "F541"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
